--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -29,18 +29,60 @@
 
 \newcommand{\desc}[1]{\textit{#1} \vspace{1em}}
 
-\title{\itshape Exercises week 8}
+\title{\itshape Exercises week 1}
 
 \author{
-	Niels Wouda \\ s2533561
+	Klaas Isaac Bijlsma \\ s2394480
 	\and
 	David Vroom \\ s2309939
 }
 
-\date{9 November, 2017}
+\date{\today}
 
 \begin{document}
 \maketitle
 
+\section*{Exercise 1}
+\desc{Attain some familiarity with the way functions are selected from namespaces}
 
+We used the following code,
+\lstinputlisting[title=\texttt{main.cc}]{../ex1/main.cpp}
+
+\clearpage
+\section*{Exercise 2}
+\desc{}
+
+\clearpage
+\section*{Exercise 3}
+\desc{}
+
+\clearpage
+\section*{Exercise 4}
+\desc{}
+
+\clearpage
+\section*{Exercise 5}
+\desc{}
+
+\clearpage
+\section*{Exercise 6}
+\desc{}
+
+\clearpage
+\section*{Exercise 7}
+\desc{}
+
+\clearpage
+\section*{Exercise 8}
+\desc{}
+
+\clearpage
+\section*{Exercise 9}
+\desc{}
+
+\clearpage
+\section*{Exercise 10}
+\desc{}
+
+\clearpage
 \end{document}
