--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -46,7 +46,7 @@
 \desc{Attain some familiarity with the way functions are selected from namespaces}
 
 We used the following code,
-\lstinputlisting[title=\texttt{main.cc}]{../ex1/main.cpp}
+%\lstinputlisting[title=\texttt{main.cc}]{../ex1/main.cpp}
 
 \clearpage
 \section*{Exercise 2}
