--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -50,7 +50,7 @@ We used the following code,
 
 \clearpage
 \section*{Exercise 2}
-\desc{}
+\desc{ziet ie dit?}
 
 \clearpage
 \section*{Exercise 3}
