--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -54,7 +54,12 @@ We used the following code,
 
 \clearpage
 \section*{Exercise 3}
-\desc{}
+\desc{Learn to implement index operators}
+
+The Matrix class that is used here, is derived from the solutions of excercise 64.
+
+We used the following code,
+\lstinputlisting[title=\texttt{matrix/matrix.h}]{../ex3/matrix/matrix.h}
 
 \clearpage
 \section*{Exercise 4}
