--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -59,11 +59,18 @@ We used the following code,
 The Matrix class that is used here, is derived from the solutions of excercise 64.
 
 We used the following code,
-\lstinputlisting[title=\texttt{matrix/matrix.h}]{../ex3/matrix/matrix.h}
+\lstinputlisting[title=\texttt{matrix/matrix.h}]{../ex4/matrix/matrix.h}
 
 \clearpage
 \section*{Exercise 4}
-\desc{}
+\desc{Learn to implement and spot opportunities for overloaded operators}
+
+The header is shown in exercise 3, the implementations of the added functions are shown below:
+\lstinputlisting[title=\texttt{matrix/add.cc}]{../ex4/matrix/add.cc}
+\lstinputlisting[title=\texttt{matrix/operatoradd.cc}]{../ex4/matrix/operatoradd.cc}
+\lstinputlisting[title=\texttt{matrix/operatoradd2.cc}]{../ex4/matrix/operatoradd2.cc}
+\lstinputlisting[title=\texttt{matrix/operatorcompadd1.cc}]{../ex4/matrix/operatorcompadd1.cc}
+\lstinputlisting[title=\texttt{matrix/operatorcompadd2.cc}]{../ex4/matrix/operatorcompadd2.cc}
 
 \clearpage
 \section*{Exercise 5}
