--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage[left=1in, right=1in]{geometry}
+
 
 \usepackage{url}
 
@@ -23,10 +25,11 @@
 	belowskip=1.5em,
 	aboveskip=1.5em,
 	fontadjust,
-	tabsize=4		%added for proper tab alligning
+	tabsize=4,		%added for proper tab alligning
+	xleftmargin=0cm,
+	xrightmargin=0cm
 }
 
-\usepackage[left=1.25in, right=1.25in]{geometry}
 
 \newcommand{\desc}[1]{\textit{#1} \vspace{1em}}
 
@@ -96,7 +99,16 @@ The header is shown in exercise 3, the implementations of the added functions ar
 
 \clearpage
 \section*{Exercise 5}
-\desc{}
+\desc{Learn to insert/extract objects of your own class}
+
+We used the following code,
+\lstinputlisting[title=\texttt{matrix/extractcols.cc}]{../ex5/matrix/extractcols.cc}
+\lstinputlisting[title=\texttt{matrix/extractrows.cc}]{../ex5/matrix/extractrows.cc}
+\lstinputlisting[title=\texttt{matrix/functor1.cc}]{../ex5/matrix/functor1.cc}
+\lstinputlisting[title=\texttt{matrix/functor2.cc}]{../ex5/matrix/functor2.cc}
+\lstinputlisting[title=\texttt{matrix/functor3.cc}]{../ex5/matrix/functor3.cc}
+\lstinputlisting[title=\texttt{matrix/operatorextract.cc}]{../ex5/matrix/operatorextract.cc}
+\lstinputlisting[title=\texttt{matrix/operatorinsert.cc}]{../ex5/matrix/operatorinsert.cc}
 
 \clearpage
 \section*{Exercise 6}
