--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -116,7 +116,13 @@ We used the following code,
 
 \clearpage
 \section*{Exercise 7}
-\desc{}
+\desc{Learn to implement and spot opportunities for overloaded operators}
+\subsection*{1.}
+The following two overloaded operators are added to compare two \texttt{Matrix} objects for (in)equality:
+\lstinputlisting[title=\texttt{matrix/operatorequalto.cc}]{../ex7/matrix/operatorequalto.cc}
+\lstinputlisting[title=\texttt{matrix/operatornotequalto.cc}]{../ex7/matrix/operatornotequalto.cc}
+
+
 
 \clearpage
 \section*{Exercise 8}
