--- a/week_1/text/week_1.tex
+++ b/week_1/text/week_1.tex
@@ -121,8 +121,11 @@ We used the following code,
 The following two overloaded operators are added to compare two \texttt{Matrix} objects for (in)equality:
 \lstinputlisting[title=\texttt{matrix/operatorequalto.cc}]{../ex7/matrix/operatorequalto.cc}
 \lstinputlisting[title=\texttt{matrix/operatornotequalto.cc}]{../ex7/matrix/operatornotequalto.cc}
-
-
+\subsection*{2.}
+We modified the following code of the \texttt{Strings} class to facilitate comparing for (in)equality,
+\lstinputlisting[title=\texttt{strings/strings.h}]{../ex7a/strings/strings.h}
+\lstinputlisting[title=\texttt{strings/operatorequalto.cc}]{../ex7a/strings/operatorequalto.cc}
+\lstinputlisting[title=\texttt{strings/operatornotequalto.cc}]{../ex7a/strings/operatornotequalto.cc}
 
 \clearpage
 \section*{Exercise 8}
