--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -78,8 +78,8 @@
 
 \clearpage
 \section*{Exercise 18}
-\desc{}
-
+\desc{Learn to identify points where exceptions may be thrown}
+See 10.10 Annotations.
 
 \clearpage
 \section*{Exercise 19}
