--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -79,7 +79,7 @@
 \clearpage
 \section*{Exercise 18}
 \desc{Learn to identify points where exceptions may be thrown}
-See 10.10 Annotations.
+See 10.10 Annotations ;-)
 
 \clearpage
 \section*{Exercise 19}
