--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -68,8 +68,19 @@
 
 \clearpage
 \section*{Exercise 16}
-\desc{}
+\desc{Learn how to end a program safely}
 
+We used the following code,
+
+\lstinputlisting[title=\texttt{main.ih}]{../ex16/main.ih}
+\lstinputlisting[title=\texttt{main.cc}]{../ex16/main.cc}
+\lstinputlisting[title=\texttt{function1.cc}]{../ex16/function1.cc}
+\lstinputlisting[title=\texttt{function2.cc}]{../ex16/function2.cc}
+\lstinputlisting[title=\texttt{function3.cc}]{../ex16/function3.cc}
+\lstinputlisting[title=\texttt{demo/demo.ih}]{../ex16/demo/demo.ih}
+\lstinputlisting[title=\texttt{demo/demo.h}]{../ex16/demo/demo.h}
+\lstinputlisting[title=\texttt{demo/demo.cc}]{../ex16/demo/demo.cc}
+\lstinputlisting[title=\texttt{demo/destructor.cc}]{../ex16/demo/destructor.cc}
 
 \clearpage
 \section*{Exercise 17}
