--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -62,6 +62,7 @@ We used the following code,
 \lstinputlisting[title=\texttt{main.ih}]{../ex12/main.ih}
 \lstinputlisting[title=\texttt{main.cc}]{../ex12/main.cc}
 
+\lstinputlisting[title=\texttt{Output of main.cc},language=bash, numbers=none]{../ex12/outputex12.txt}
 
 
 \textbf{Explain why the solution is so simple}\\
