--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -85,9 +85,10 @@ The following main function (\texttt{main4.cc}) has two exception levels. In the
 \section*{Exercise 13}
 \desc{Learn to create an exception safe class}
 
-We modified the following code,
-\lstinputlisting[title=\texttt{main.cc}]{../ex13/main.cc}
+We modified the following code of the matrix solution,
+\lstinputlisting[title=\texttt{main.cc}]{../ex13/main1.cc}
 \lstinputlisting[title=\texttt{matrix/matrix.h}]{../ex13/matrix/matrix.h}
+\lstinputlisting[title=\texttt{matrix/matrix.ih}]{../ex13/matrix/matrix.ih}
 \lstinputlisting[title=\texttt{matrix/at.cc}]{../ex13/matrix/at.cc}
 \lstinputlisting[title=\texttt{matrix/identity.cc}]{../ex13/matrix/identity.cc}
 \lstinputlisting[title=\texttt{matrix/matrix1.cc}]{../ex13/matrix/matrix1.cc}
@@ -97,8 +98,8 @@ We modified the following code,
 \lstinputlisting[title=\texttt{matrix/operatorassign2.cc}]{../ex13/matrix/operatorassign2.cc}
 \lstinputlisting[title=\texttt{matrix/swap.cc}]{../ex13/matrix/swap.cc}
 \lstinputlisting[title=\texttt{matrix/tr.cc}]{../ex13/matrix/tr.cc}
-\lstinputlisting[title=\texttt{matrix/swap.cc}]{../ex13/matrix/swap.cc}
 \lstinputlisting[title=\texttt{matrix/transpose.cc}]{../ex13/matrix/transpose.cc}
+
 \clearpage
 \section*{Exercise 14}
 \desc{}
