--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -89,8 +89,7 @@ We used the following code,
 \lstinputlisting[title=\texttt{maxfour/destructor.cc}]{../ex12/maxfour/destructor.cc}
 \lstinputlisting[title=\texttt{main.ih}]{../ex12/main.ih}
 \lstinputlisting[title=\texttt{main.cc}]{../ex12/main.cc}
-
-\lstinputlisting[title=\texttt{Output of main4.cc},language=bash, numbers=none]{../ex12/output.txt}
+\lstinputlisting[title=\texttt{Output of main.cc},language=bash, numbers=none]{../ex12/outputMain.txt}
 
 \textbf{Explain why the solution is so simple}\\
 The solution is so simple because when an exception is thrown during the construction of an array of 10 Maxfour objects, stack unwinding will destroy the already allocated objects. No explicit call of the destructor is needed. Furthermore we do not need to keep track of the already allocated objects. 
