--- a/week_2/text/week_2.tex
+++ b/week_2/text/week_2.tex
@@ -98,8 +98,7 @@ The solution is so simple because when an exception is thrown during the constru
 \section*{Exercise 13}
 \desc{Learn to create an exception safe class}
 
-We modified the following code of the matrix solution,
-\lstinputlisting[title=\texttt{main.cc}]{../ex13/main1.cc}
+We modified the following code of the matrix class solution,
 \lstinputlisting[title=\texttt{matrix/matrix.h}]{../ex13/matrix/matrix.h}
 \lstinputlisting[title=\texttt{matrix/matrix.ih}]{../ex13/matrix/matrix.ih}
 \lstinputlisting[title=\texttt{matrix/at.cc}]{../ex13/matrix/at.cc}
@@ -112,7 +111,7 @@ We modified the following code of the matrix solution,
 \lstinputlisting[title=\texttt{matrix/swap.cc}]{../ex13/matrix/swap.cc}
 \lstinputlisting[title=\texttt{matrix/tr.cc}]{../ex13/matrix/tr.cc}
 \lstinputlisting[title=\texttt{matrix/transpose.cc}]{../ex13/matrix/transpose.cc}
-
+\lstinputlisting[title=\texttt{main.cc}]{../ex13/main1.cc}
 
 \clearpage
 \section*{Exercise 16}
@@ -167,6 +166,7 @@ If \texttt{test()} throws an int (e.g. 1), the output shown below is produced. I
 \clearpage
 \section*{Exercise 18}
 \desc{Learn to identify points where exceptions may be thrown}
+
 See 10.10 Annotations ;-)
 
 \clearpage
