--- a/week_3/text/week_3.tex
+++ b/week_3/text/week_3.tex
@@ -68,6 +68,13 @@
 
 \section*{Exercise 24}
 \desc{Learn to initialize \texttt{string} objects with \texttt{new}}
+We used the following code,
+
+\lstinputlisting[title=\texttt{main.ih}]{../ex24/main.ih}
+\lstinputlisting[title=\texttt{main.cc}]{../ex24/main.cc}
+\lstinputlisting[title=\texttt{factory.cc}]{../ex24/factory.cc}
+
+
 
 \clearpage
 \end{document}
