--- a/week_3/text/week_3.tex
+++ b/week_3/text/week_3.tex
@@ -49,15 +49,41 @@
 \section*{Exercise 20}
 \desc{Learn the implications of using friends}
 
+We used the following code,
+
+\lstinputlisting[title=\texttt{binops/binops.h}]{../ex20/binops/binops.h}
+\lstinputlisting[title=\texttt{addition/addition.h}]{../ex20/addition/addition.h}
+\lstinputlisting[title=\texttt{subtraction/subtraction.h}]{../ex20/subtraction/subtraction.h}
+
 \clearpage
 
 \section*{Exercise 21}
 \desc{Learn to implement a class hierarchy using friends in the final derived class}
 
+We used the following code,
+
+\lstinputlisting[title=\texttt{binops/binops.ih}]{../ex20/binops/binops.ih}
+\lstinputlisting[title=\texttt{binops/binopsadd.cc}]{../ex20/binops/binopsadd.cc}
+\lstinputlisting[title=\texttt{binops/binopssub.cc}]{../ex20/binops/binopssub.cc}
+\lstinputlisting[title=\texttt{addition/addition.ih}]{../ex20/addition/addition.ih}
+\lstinputlisting[title=\texttt{addition/operatoraddis1.cc}]{../ex20/addition/operatoraddis1.cc}
+\lstinputlisting[title=\texttt{addition/operatoraddis2.cc}]{../ex20/addition/operatoraddis2.cc}
+\lstinputlisting[title=\texttt{subtraction/subtraction.ih}]{../ex20/subtraction/subtraction.ih}
+\lstinputlisting[title=\texttt{subtraction/operatorsubis1.cc}]{../ex20/subtraction/operatorsubis1.cc}
+\lstinputlisting[title=\texttt{subtraction/operatorsubis2.cc}]{../ex20/subtraction/operatorsubis2.cc}
+
+
 \clearpage
 
 \section*{Exercise 22}
 \desc{Learn to use a class hierarchy using friends in the final derived class}
+
+We used the following code,
+
+\lstinputlisting[title=\texttt{addition/operatoradd1.cc}]{../ex20/addition/operatoradd1.cc}
+\lstinputlisting[title=\texttt{addition/operatoradd2.cc}]{../ex20/addition/operatoradd2.cc}
+\lstinputlisting[title=\texttt{subtraction/operatorsub1.cc}]{../ex20/subtraction/operatorsub1.cc}
+\lstinputlisting[title=\texttt{subtraction/operatorad2.cc}]{../ex20/subtraction/operatorsub2.cc}
 
 \clearpage
 
