ex20 minor change and ex23

--- a/week_3/text/week_3.tex
+++ b/week_3/text/week_3.tex
@@ -109,6 +109,13 @@ Below we provide the remaining members of the classes \texttt{Binops}, \texttt{A
 \section*{Exercise 23}
 \desc{Learn to use a class hierarchy using friends in the final derived class}
 
+We made a basic calculator. We used the code of the previous exercises with minor modifications in the cout statements. We added a datamember, constructor and an accessor to the class \texttt{Operations}, to store and access values. Below you find a simple main function which acts as an interactive basic calculator. Its output shows that all operators are called and work as intended.\\
+
+We used the following (modified) code,
+
+
+
+
 \clearpage
 
 \section*{Exercise 24}
